# KRR_RAG_KG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  main_v2.py  pyproject.toml  requirements.txt  run_web.py  setup.py  test_system.py
data/raw/: fandom_arenas_cards.json
kg/ingest/: ingest_cards.py
kg/queries/: card_ingest.cypher  query_templates.cypher
kg/schema/: create_constraints.cypher
prolog/: cards.pl  main.pl  rules.pl
rag/: answerer.py  llm.py  pipeline.py  retriever.py  translator.py
src/: __init__.py
src/cli/: __init__.py  display.py  main.py
src/domain/: __init__.py  models.py
src/kg/: __init__.py  ingestion.py  relationship_rules.py  schema.py
src/rag/: deck_analyzer.py  generator.py  llm.py  pipeline.py  query_preprocessor.py  retriever.py  translator.py
src/rag_v2/: __init__.py  deck_analyzer.py  generator.py  pipeline.py  query_preprocessor.py  retriever.py  translator.py
src/services/: __init__.py  rag_service.py
src/utils/: config.py
web/: app.py
web/static/css/: style.css
web/static/js/: chat.js
web/templates/: index.html
